--- a/ui/index.html
+++ b/ui/index.html
@@ -271,7 +271,7 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p> 
-                    <img src="img/profile.jpg" class="img-circle" alt="profile" >
+                    <img src="https://igcdn-photos-b-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/s150x150/13413410_478447315685433_2107082282_a.jpg" class="img-circle" alt="profile" >
                    
               </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
