--- a/ui/index.html
+++ b/ui/index.html
@@ -124,7 +124,7 @@
                     <h2 class="section-heading">George Jacob</h2>
                     <hr class="light">
                     <p class="text-faded">I had completed my BE Computer Science & Engineering at Noorul Islam University, Kumarcoil, Thuckalay in Kanyakumari District. I am doing MTech Computer Science with Internet Technologies at Amrita Vishwa Vidyapeetham, Vallikavu in Kollam District. 
-My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
+My interests are Programming in C,C++, C#.Net, VB.Net, HTML, CSS, NodeJS</p>
                        <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Know More!</a>
                 </div>
             </div>
