--- a/ui/index.html
+++ b/ui/index.html
@@ -197,7 +197,8 @@
     <div style="background-color: #AF7AC5;">
        <section class="no-padding" id="portfolio">
       <div class="container"><br>
-    <!--<center><font color="white"><h2><b>PROJECTS</b></h2></font></center><hr class="primary"><br>-->
+    <!--<center><font color="white"><h2><b>
+</b></h2></font></center><hr class="primary"><br>-->
         <div class="row">
             <div class="row no-gutter">
                  <!-- <div class="col-lg-4 col-sm-6">
